Always show a scrollbar to avoid jumping

--- a/src/index.sass
+++ b/src/index.sass
@@ -35,6 +35,8 @@ ul
 html
   font-family: Ysabeau
   font-size: 18px
+  overflow-y: scroll
+
 
 #root
   display: flex
